# RD

./: .cursorignore  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .product-info  1.json  AGENTS.md  APPLY_FIXES.md  CACHE_OPTIMIZATION.md  CHANGELOG.md  CHANGELOG_MARKER_OCR.md  CHECK_R2_LOGS.md  CLAUDE.md  CLAUDE_CODE_INSTRUCTIONS.md  DEBUG_LOGGING.md  DRAWING_PERFORMANCE_FIX.md  FINAL_SECURITY_REPORT.md  MIGRATION_NGROK.md  OFFLINE_MODE.md  PRE_COMMIT_SETUP.md  PROMPTS_SYSTEM.md  QUICK_FIX.md  README.md  README_SECURITY_SETUP.md  REMOTE_OCR_FIX.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_IMPROVEMENTS.md  SUMMARY_NGROK_MIGRATION.md  SUMMARY_R2.md  TEST_FIX.md  TREE_SIMPLIFICATION.md  _metadata.py  annotation.json  build.py  debug_transformers.py  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.override.yml  (+24 more)
.claude/: settings.local.json
1/: annotation.json  document.md
2/: annotation.json  document.md
app/: __init__.py  annotation_io.py  auto_segmentation.py  config.py  cropping.py  datalab_integration.py  datalab_ocr.py  logging_manager.py  main.py  marker_integration.py  models.py  ocr.py  ocr_batch.py  ocr_engines.py  pdf_structure.py  pdf_utils.py  r2_storage.py  reapply.py  remote_ocr_client.py  report_md.py  segmentation_api.py  tree_client.py  tree_models.py  unified_client.py
apps/: __init__.py
data/: 133-23-ГК-АР1_document.md  annotation.json  document.md
database/: schema.sql
docs/: ANNOTATION_CACHE.md  API.md  API_INTEGRATION.md  ARCHITECTURE.md  BLOCK_EDITING_FIXES.md  CACHE_IMPLEMENTATION.md  CHANDRA_OCR.md  (+31 more)
(+533 files in other folders)
